Added tests, cleaned up the code slightly.